minor change in repo link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span class="is-error">Goran Kortjie Resume</span>
       </a>
       <div class="top-right-section">
-        <a href="https://github.com/iFieryGod" target="_blank" data-toggle="tooltip" title="GitHub"><i class="nes-icon github"></i></a>
+        <a href="https://github.com/iFieryGod/My-Resume/blob/master/README.md" target="_blank" data-toggle="tooltip" title="GitHub"><i class="nes-icon github"></i></a>
         <a href="https://www.linkedin.com/in/goran-kortjie-273731195/" target="_blank" data-toggle="tooltip" title="Linkedin profile"><i class="nes-icon linkedin"></i></a>
         <a href="mailto: mkortjie023@gmail.com" target="_blank" data-toggle="tooltip" title="Email Address"><i class="nes-icon gmail"></i></a>
       </div>
