optimized the site

--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta
+  name="description"
+  content="Goran's simple resume for maple bacon donuts
+           makes a sticky, sweet treat with just a hint
+           of salt that you'll keep coming back for.">
+  <link rel="title icon" href="/images/8-bit-icon-2.jpg">
   <!-- Bringing in the nes-css framework by CDN -->
-  <link href="https://unpkg.com/nes.css@latest/css/nes.min.css" rel="stylesheet" />
+  <link rel="stylesheet dns-prefetch" href="https://unpkg.com/nes.css@latest/css/nes.min.css" as="style">
   <!-- Bringing in font awesome for custom font style -->
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link  rel="stylesheet preload prefetch" href="https://fonts.googleapis.com/css?family=Press+Start+2P" as="style">
   <!-- Bringing in the flexbox grid CDN, Perfect for simple structuring and organizing content -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+  <link rel="stylesheet preload prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" as="style" type="text/css" >
   <!-- Bringing in my own custom css file -->
   <link rel="stylesheet" href="css/style.css">
   <title>Goran Kortjie</title>
@@ -22,9 +28,9 @@
         <span class="is-error">Goran Kortjie Resume</span>
       </a>
       <div class="top-right-section">
-        <a href="https://github.com/iFieryGod/My-Resume/blob/master/README.md" target="_blank" data-toggle="tooltip" title="GitHub"><i class="nes-icon github"></i></a>
-        <a href="https://www.linkedin.com/in/goran-kortjie-273731195/" target="_blank" data-toggle="tooltip" title="Linkedin profile"><i class="nes-icon linkedin"></i></a>
-        <a href="mailto: mkortjie023@gmail.com" target="_blank" data-toggle="tooltip" title="Email Address"><i class="nes-icon gmail"></i></a>
+        <a rel="noreferrer" href="https://github.com/iFieryGod/My-Resume/blob/master/README.md" target="_blank" data-toggle="tooltip" title="GitHub"><i class="nes-icon github"></i></a>
+        <a rel="noreferrer" href="https://www.linkedin.com/in/goran-kortjie-273731195/" target="_blank" data-toggle="tooltip" title="Linkedin profile"><i class="nes-icon linkedin"></i></a>
+        <a rel="noreferrer" href="mailto: mkortjie023@gmail.com" target="_blank" data-toggle="tooltip" title="Email Address"><i class="nes-icon gmail"></i></a>
       </div>
     </div>
   </nav>
@@ -36,11 +42,11 @@
       <p>Secondly, I have completed certificates in CISCO Networking Academy, which covers CompTIA A+, CompTIA N+, Routing and Switching and ITSM (IT Service Management) from the College of Cape Town. I learned to focus and pay attention to detail when troubleshooting problems occur. My work experience at
       Makro (Cape Gate) and the Department of Social Development where I dealt with
       filing and other administrative work bears testimony to this fact.</p>
-      
+
       <p>I am immediately available if my experience and qualifications is suited for the position on offer. I am also willing to start from the bottom and work my way up and willing to accept a salary that is equivalent to this position. Currently, I am travelling by public transport and if convenient will be willing to relocate.</p>
-      
+
       <p>I trust that my application will receive your favorable consideration. Yours faithfully</p>
-      <blockquote><i class="nes-icon trophy"></i>Goran Kortjie</blockquote> 
+      <blockquote><i class="nes-icon trophy"></i>Goran Kortjie</blockquote>
   </div>
   <!-- Greeting Message -->
   <section class="container" style="margin-bottom: 2rem;">
@@ -65,7 +71,7 @@
           <h4>Skills</h4>
           <div class="lists">
             <div class="row">
-              <div class="col-4">
+              <div class="col-md-4">
                 <ul class="nes-list is-circle">
                   <li>A+</li>
                   <li>N+</li>
@@ -74,7 +80,7 @@
                   <li>CCNA</li>
                 </ul>
               </div>
-              <div class="col-8">
+              <div class="col-md-8">
                 <ul class="nes-list is-circle">
                   <progress class="nes-progress is-primary" value="70" max="100"></progress>
                   <progress class="nes-progress is-success" value="50" max="100"></progress>
@@ -86,7 +92,7 @@
             </div>
           </div>
           <p id="address">Address: Level 3, Stadium on Main 99 Main Road South Road, Claremont, Cape Town, 8001</p>
-          <p><a class="nes-btn is-primary" href="https://ctutraining.ac.za/cape-town-campus/">Visit Website</a></p>
+          <p><a class="nes-btn is-primary" rel="noreferrer" target="_blank" href="https://ctutraining.ac.za/cape-town-campus/">Visit Website</a></p>
         </div>
       </div>
       <div class="col-md-6">
@@ -95,7 +101,7 @@
           <h4>Skills</h4>
           <div class="lists">
             <div class="row">
-              <div class="col-3">
+              <div class="col-md-3">
                 <ul class="nes-list is-circle">
                   <li>HTML5</li>
                   <li>CSS3</li>
@@ -104,7 +110,7 @@
                   <li>Mongo DB</li>
                 </ul>
               </div>
-              <div class="col-9">
+              <div class="col-md-9">
                 <ul class="nes-list is-circle">
                   <progress class="nes-progress is-primary" value="70" max="100"></progress>
                   <progress class="nes-progress is-success" value="50" max="100"></progress>
@@ -116,7 +122,7 @@
             </div>
           </div>
           <p>1st Floor, Landsdowne Building, Office F01A, Brookside Office Park, 11 Imam Haron Rd, Claremont, 7708</p>
-          <p><a class="nes-btn is-primary" href="https://themavenacademy.one/">Visit Website</a></p>
+          <p><a class="nes-btn is-primary" rel="noreferrer" target="_blank" href="https://themavenacademy.one/">Visit Website</a></p>
         </div>
       </div>
     </div>
@@ -186,31 +192,31 @@
   <!-- Contact Me Section -->
   <div id="contact-me" class="nes-container is-dark with-title" style="margin: 1rem;">
     <p class="title">Contact Me</p>
-    <a href="https://github.com/iFieryGod" target="_blank" data-toggle="tooltip" title="GitHub"><i class="nes-icon github"></i></a>
-    <a href="https://www.linkedin.com/in/goran-kortjie-273731195/" target="_blank" data-toggle="tooltip" title="Linkedin profile"><i class="nes-icon linkedin"></i></a>
-    <a href="mailto: mkortjie023@gmail.com" target="_blank" data-toggle="tooltip" title="Email Address"><i class="nes-icon gmail"></i></a>
-  </div> 
+    <a href="https://github.com/iFieryGod" target="_blank" rel="noreferrer" data-toggle="tooltip" title="GitHub"><i class="nes-icon github"></i></a>
+    <a href="https://www.linkedin.com/in/goran-kortjie-273731195/" target="_blank" rel="noreferrer" data-toggle="tooltip" title="Linkedin profile"><i class="nes-icon linkedin"></i></a>
+    <a href="mailto: mkortjie023@gmail.com" target="_blank" rel="noreferrer" data-toggle="tooltip" title="Email Address"><i class="nes-icon gmail"></i></a>
+  </div>
 <!-- Footer Section -->
   <footer style="margin-bottom: 2rem;">
     <div class="nes-container is-rounded is-primary">
       <div class="row center-md">
-        <div id="ending-footer"><img  src="/images/8-bit-icon-15.jpg" alt="" width="50px" height="50px">
-          <span>Copyright © <span id="year"></span> GK. All Rights Reserved</span>
+        <div id="ending-footer">
+          <img  src="/images/8-bit-icon-15.jpg" alt="" width="20px" height="20px">
+          <span>Copyright © <span id="year"></span> made with <span id="heart">&#x2764;</span> Goran Kortjie. All Rights Reserved</span>
         </div>
       </div>
     </div>
     </footer>
     <!-- Bringing in this version of jquery as per the guideline of nes-css framework -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="/js/main.js"></script>
     <!-- Bringing in this version of jquery as per the guideline of nes-css framework -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <!-- Bringing in this version of jquery for the scroll-to-top functionality -->
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script>
       // Setting the date to the Date function for future updates
       $('#year').text(new Date().getFullYear());
     </script>
     <!-- Bringing my own custom javascript file -->
-    <script src="/js/app.js"></script>
+    <script async src="/js/app.js"></script>
 </body>
 </html>
